--- a/Experimento1Arquisoft-web/src/main/webapp/index.xhtml
+++ b/Experimento1Arquisoft-web/src/main/webapp/index.xhtml
@@ -1,10 +1,10 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ice="http://www.icesoft.com/icefaces/component"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+<ui:composition template="/main-template.xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ice="http://www.icesoft.com/icefaces/component"
+                xmlns:ui="http://java.sun.com/jsf/facelets">​
     
     <h:head>
         <title>Facelet Title</title>
@@ -20,11 +20,9 @@
 			<div class="formInfo">
 				<p>You aren't connected to Facebook yet. Click the button to connect this application with your Facebook account.</p>
 			</div>
-                        <ice:commandButton value="Ingresar" action="#{loginBean.login}"/>
+                       <!-- <ice:commandButton value="Ingresar" action="#{loginBean.login}"/>
 			<!--<p><button type="submit">Connect to Facebook</button></p>-->
 		</h:form>
         
         <!--<h:link outcome="welcomeIcefaces" value="ICEfaces welcome page" />-->
     </h:body>
-</html>
-
